--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                  <!-- right container -->
                     <div class="user_image">
-                        <img src="/pexels-pixabay-417173.jpg" alt="" id="preview_image">
+                        <img src="pexels-pixabay-417173.jpg" alt="" id="preview_image">
                     </div>
                 </div>
  
